New first commit, w/o React

--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node src/server/server.js",
+    "start": "electron .",
     "electron": "electron ."
   },
   "dependencies": {
+    "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "electron": "^38.2.0",
+    "electron-is-dev": "^3.0.1",
     "express": "^5.1.0",
     "mysql2": "^3.15.1",
     "nodemon": "^3.1.10",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "wait-on": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -32,7 +33,7 @@
     "vite": "^7.1.7"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
+  "main": "src/main/main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JavierBar7/App-Gestor-Administrativo.git"
