--- a/package.json
+++ b/package.json
@@ -1,48 +1,19 @@
 {
-  "name": "gestor-administrativo",
-  "private": true,
-  "version": "0.0.0",
-  "type": "commonjs",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "electron .",
-    "electron": "electron ."
-  },
-  "dependencies": {
-    "concurrently": "^9.2.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "electron": "^38.2.0",
-    "electron-is-dev": "^3.0.1",
-    "express": "^5.1.0",
-    "mysql2": "^3.15.1",
-    "nodemon": "^3.1.10",
-    "wait-on": "^9.0.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "babel-plugin-react-compiler": "^19.1.0-rc.3",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "name": "App-Gestor-Administrativo",
+  "version": "1.0.0",
+  "description": "Sistema de Cobro Electron", 
   "main": "src/main/main.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JavierBar7/App-Gestor-Administrativo.git"
+  "scripts": {
+    "start": "electron ."
   },
-  "keywords": [],
+  "keywords": [
+    "electron",
+    "javascript"
+  ],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JavierBar7/App-Gestor-Administrativo/issues"
+  "dependencies": {
+    "electron": "^38.4.0"
   },
-  "homepage": "https://github.com/JavierBar7/App-Gestor-Administrativo#readme"
+  "devDependencies": {}
 }
