--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "App-Gestor-Administrativo",
   "version": "1.0.0",
-  "description": "Sistema de Cobro Electron", 
-  "main": "src/main/main.js",
+  "description": "Sistema de Cobro Electron",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^38.4.0"
-  },
-  "devDependencies": {}
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
+    "electron": "^38.4.0",
+    "nodemon": "^3.1.10"
+  }
 }
