--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "electron": "^38.4.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pdfkit": "^0.17.2"
   }
 }
